pool:name: ubuntu

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ stages:
   jobs:
   - job: Build
     pool:
-      name: ChinaAzure
+      name: ubuntu
     variables:
       project: '**/*.csproj'
       buildPlatform: 'Any CPU'
