--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,12 @@ stages:
     steps:
     - checkout: self
       path: KeyVault
-      clean: false
+      clean: "false"
     - task: UseDotNet@2
-      displayName: Use .Net Core sdk 8.x
+      displayName: Use .Net Core sdk 10.x
       inputs:
         packageType: sdk
-        version: 8.x
+        version: 10.x
     - task: DotNetCoreCLI@2
       displayName: Publish
       inputs:
