--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,10 @@ stages:
         command: 'publish'
         publishWebProjects: false
         projects: '$(project)'
-        arguments: '--configuration $(buildConfiguration) --output $(build.artifactstagingdirectory)'
+        arguments: '--configuration $(buildConfiguration) --output $(build.artifactstagingdirectory)/linux-x64 --runtime linux-x64 --self-contained true /p:PublishTrimmed=true'
+      enabled: "false"
+    - script: |
+        dotnet publish $(project) --configuration $(buildConfiguration) --output $(build.artifactstagingdirectory)/win-x64 --runtime win-x64 --self-contained true /p:PublishTrimmed=true
+        dotnet publish $(project) --configuration $(buildConfiguration) --output $(build.artifactstagingdirectory)/linux-x64 --runtime linux-x64 --self-contained true /p:PublishTrimmed=true
+      displayName: 'dotnet publish'
     - publish: $(build.artifactstagingdirectory)
