--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,5 +42,6 @@ jobs:
         files: 
           drops/linux-x64/KeyVault
           drops/win-x64/KeyVault.exe
+        tag_name: v1.0.${{ github.run_number }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
