--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,4 +44,4 @@ jobs:
           drops/win-x64/KeyVault.exe
         tag_name: v1.0.${{ github.run_number }}
       env:
-        ACCESS_TOKEN: ${{ secrets.release_token }}
+        GITHUB_TOKEN: ${{ secrets.release_token }}
