--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Create GitHub Release and Upload Assets
       uses: softprops/action-gh-release@v2
       with:
-        files: 
+        files: |
           drops/linux-x64/KeyVault
           drops/win-x64/KeyVault.exe
         tag_name: v1.0.${{ github.run_number }}
