--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build linux-x64
-      run: dotnet publish KeyVault.csproj --output drops/linux-x64 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true
-    - name: Build win-x64
-      run: dotnet publish KeyVault.csproj --output drops/win-x64 --runtime win-x64 --self-contained true -p:PublishSingleFile=true
+      run: |
+        dotnet publish KeyVault.csproj --output drops/linux-x64 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true
+        dotnet publish KeyVault.csproj --output drops/win-x64 --runtime win-x64 --self-contained true -p:PublishSingleFile=true
+        zip drops/keyvault_linux_x64_v1.0.${{ github.run_number }}.zip  drops/linux-x64/KeyVault
+        zip drops/keyvault_win_x64_v1.0.${{ github.run_number }}.zip  drops/win-x64/KeyVault.exe
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
@@ -40,8 +42,8 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          drops/linux-x64/KeyVault
-          drops/win-x64/KeyVault.exe
+          drops/keyvault_linux_x64_v1.0.${{ github.run_number }}
+          drops/keyvault_win_x64_v1.0.${{ github.run_number }}.zip
         tag_name: v1.0.${{ github.run_number }}
       env:
         GITHUB_TOKEN: ${{ secrets.release_token }}
