--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: KeyVault
 
 on:
   push:
@@ -21,12 +21,10 @@ jobs:
     - name: dotnet publish
       run: |
         dotnet publish KeyVault.cs --output drops/linux-x64 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
-        dotnet publish KeyVault.cs --output drops/win-x64 --runtime win-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
     - name: zip artifacts
       if: github.event_name != 'pull_request'
       run: |
         zip -j drops/keyvault_linux_x64_1.0.${{ github.run_number }}.zip  drops/linux-x64/KeyVault
-        zip -j drops/keyvault_win_x64_1.0.${{ github.run_number }}.zip  drops/win-x64/KeyVault.exe
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
