--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,64 +5,66 @@ name: KeyVault
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET SDK 10.x
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 10.x
-    - name: dotnet publish
-      run: |
-        dotnet publish KeyVault.cs --output drops/linux-x64 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
-    - name: zip artifacts
-      run: |
-        zip -j keyvault_linux_x64_1.0.${{ github.run_number }}.zip  drops/linux-x64/KeyVault
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: keyvault_linux_x64
-        path: keyvault_linux_x64_1.0.${{ github.run_number }}.zip
-
   build-win:
     runs-on: windows-latest
-    needs: build-linux
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET SDK 10.x
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 10.x
-    - name: dotnet publish
-      run: |
-        dotnet publish KeyVault.cs --output drops --runtime win-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
-        Compress-Archive -Path drops\\KeyVault.exe -DestinationPath keyvault_win_x64_1.0.${{ github.run_number }}.zip
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: keyvault_win_x64
-        path: keyvault_win_x64_1.0.${{ github.run_number }}.zip
+      - uses: actions/checkout@v4
+      - name: Setup .NET SDK 10.x
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.x
+      - name: dotnet publish
+        run: |
+          dotnet publish KeyVault.cs --output drops --runtime win-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
+          Compress-Archive -Path drops\\KeyVault.exe -DestinationPath keyvault_win_x64_1.0.${{ github.run_number }}.zip
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: keyvault_win_x64
+          path: keyvault_win_x64_1.0.${{ github.run_number }}.zip
+
+  build-linux:
+    runs-on: ubuntu-latest
+    needs: build-win
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET SDK 10.x
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.x
+      - name: dotnet publish
+        run: |
+          dotnet publish KeyVault.cs --output drops/linux-x64 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true -p:AssemblyVersion=1.0.0.${{ github.run_number }} -p:Version=1.0.0.${{ github.run_number }}
+      - name: zip artifacts
+        run: |
+          zip -j keyvault_linux_x64_1.0.${{ github.run_number }}.zip  drops/linux-x64/KeyVault
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: keyvault_linux_x64
+          path: keyvault_linux_x64_1.0.${{ github.run_number }}.zip
 
   release:
     # if: github.event_name != 'pull_request'
     runs-on: linux-latest
-    needs: build-win
+    needs: build-linux
     steps:
-    - uses: actions/checkout@v4      
-    - name: download artifact
-      uses: actions/download-artifact@v5
-    - name: release
-      uses: softprops/action-gh-release@v2
-      with:
-        files: |
-          keyvault_linux_x64/keyvault_linux_x64_1.0.${{ github.run_number }}.zip
-          keyvault_win_x64/keyvault_win_x64_1.0.${{ github.run_number }}.zip
-        tag_name: v1.0.${{ github.run_number }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.release_token }}  
+      # - uses: actions/checkout@v4
+      - name: download artifact
+        uses: actions/download-artifact@v5
+      - name: release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            keyvault_linux_x64/keyvault_linux_x64_1.0.${{ github.run_number }}.zip
+            keyvault_win_x64/keyvault_win_x64_1.0.${{ github.run_number }}.zip
+          tag_name: v1.0.${{ github.run_number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.release_token }}
