--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ jobs:
   build-win:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Setup .NET SDK 10.x
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v5
         with:
           dotnet-version: 10.x
       - name: dotnet publish
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     # needs: build-win
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Setup .NET SDK 10.x
         uses: actions/setup-dotnet@v4
         with:
@@ -50,3 +50,22 @@ jobs:
         with:
           name: keyvault_linux_x64
           path: keyvault_linux_x64_1.0.${{ github.run_number }}.zip
+  release:
+    needs: 
+      - build-win
+      - build-linux
+    if: ${{ github.event_name != 'pull_request' }}
+    runs-on: linux-latest
+    steps:
+      # - uses: actions/checkout@v4
+      - name: download artifact
+        uses: actions/download-artifact@v7
+      - name: create a release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            keyvault_linux_x64/keyvault_linux_x64_1.0.${{ github.run_number }}.zip
+            keyvault_win_x64/keyvault_win_x64_1.0.${{ github.run_number }}.zip
+          tag_name: v1.0.${{ github.run_number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.release_token }}
