--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
       - build-linux
     if: ${{ github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
+    environment: prd
     steps:
       # - uses: actions/checkout@v4
       - uses: actions/download-artifact@v7
